base/be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-be-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: reservation-be
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reservation-be
    spec:
      containers:
      - name: reservation-be
        image: scgskku/reservation-be
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
