base/be/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: reservation-be-service
spec:
    ports:
        - port: 80
          targetPort: 8000
          protocol: TCP
    selector:
        app.kubernetes.io/name: reservation-be
